--- a/fe/src/styles.scss
+++ b/fe/src/styles.scss
@@ -33,3 +33,8 @@ $fa-font-path: "../node_modules/font-awesome/fonts";
 html, body { height: 100%; }
 body { background-color: #BEE1FC !important; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.mat-dialog-container {
+  padding: 0px !important;
+  border-radius: 8px !important;
+}
+
