--- a/fe/src/app/account/account.component.html
+++ b/fe/src/app/account/account.component.html
@@ -2,60 +2,107 @@
   <img class="logo" src="assets/logo.png">
 </div>
 
-<div class="account-entry" *ngIf="entry==null">
-  <div class="account-title">Account Portal</div>
-  <div *ngIf="init">
-    <div *ngIf="mode=='invalid'" class="account-message">Link is no longer valid.</div>
-    <div *ngIf="mode=='invalid'" class="account-redirect">Redirecting to Login Page.</div>
-    <div *ngIf="mode=='create'" class="account-form">
-      <div class="account-message">Create Identity</div>
-      <mat-form-field class="account-text">
-        <input matInput type="password" placeholder="Password" [(ngModel)]="password">
-      </mat-form-field>
-      <mat-form-field class="account-text">
-        <input matInput type="password" placeholder="Confirm Password" [(ngModel)]="confirm">
-      </mat-form-field>
-      <div class="account-control">
-        <button mat-raised-button class="account-button" color="primary" [disabled]="!isConfirmed()" 
-            (click)="onCreate()">Create</button>
-      </div>
-    </div>
-    <div *ngIf="mode=='reset'" class="account-form">
-      <div class="account-message">Reset Password</div>
-      <mat-form-field class="account-text">
-        <input matInput type="password" placeholder="Password" [(ngModel)]="password">
-      </mat-form-field>
-      <mat-form-field class="account-text">
-        <input matInput type="password" placeholder="Confirm Password" [(ngModel)]="confirm">
-      </mat-form-field>
-      <div class="account-control">
-        <button mat-raised-button class="account-button" color="primary" [disabled]="!isConfirmed()" 
-            (click)="onReset()">Reset</button>
-      </div>
-    </div>
-    <div *ngIf="mode=='login'" class="account-form">
-      <mat-form-field class="account-text">
-        <input matInput type="email" placeholder="Username" spellcheck="false" 
-            (keydown.enter)="$event.target.blur()" [(ngModel)]="username">
-      </mat-form-field>
-      <mat-form-field class="account-text">
-        <input matInput type="password" placeholder="Password"
+<div *ngIf="mode=='create'">
+  <div *ngIf="entry==null" class="account-create">
+    <div class="account-label">Welcome!</div>
+    <div class="account-info">The Diatabase is created by Diatum, a nonprofit with a mssion to give you ownership and control of your data and privacy. Your Diatabase provides you with storage space to upload, store, and access your contacts, photos, videos and other data used in integrated apps.</div>
+    <img class="account-img" src="assets/unlocked.png">
+    <div class="account-label">Let's get started.</div>
+    <div class="account-info">First we need to create your personal Diatabase; be sure to give it a strong password.</div>
+    <mat-spinner *ngIf="busy" class="account-busy"></mat-spinner>
+    <div class="spacer"></div>
+    <div class="account-form">
+      <div class="account-message">Diatabase Password</div>
+      <mat-form-field class="account-password">
+        <input matInput [type]="passwordType" placeholder="Password"
             (keydown.enter)="$event.target.blur()" [(ngModel)]="password">
       </mat-form-field>
+      <div class="account-option">
+        <img *ngIf="passwordType=='password'" class="account-eye" src="assets/hide.png" (click)="setPasswordType('email')">
+        <img *ngIf="passwordType=='email'" class="account-eye" src="assets/show.png" (click)="setPasswordType('password')">
+      </div>
+      <mat-form-field class="account-password">
+        <input matInput [type]="confirmType" placeholder="Confirm Password"
+            (keydown.enter)="$event.target.blur()" [(ngModel)]="confirm">
+      </mat-form-field>
+      <div class="account-option">
+        <img *ngIf="confirmType=='password'" class="account-eye" src="assets/hide.png" (click)="setConfirmType('email')">
+        <img *ngIf="confirmType=='email'" class="account-eye" src="assets/show.png" (click)="setConfirmType('password')">
+      </div>
       <div class="account-control">
-        <button mat-raised-button class="account-button" color="primary" [disabled]="!isReady()"
-            (click)="onLogin()">Login</button>
+        <button mat-raised-button class="account-button" color="primary" [disabled]="!isConfirmed()" 
+            (click)="onCreate()">Create Diatabase</button>
       </div>
     </div>
+    <img class="account-img" src="assets/locked.png">
   </div>
-  <mat-spinner *ngIf="busy" class="account-spinner"></mat-spinner>
+  <div *ngIf="entry!=null" class="account-create">
+    <div class="account-label">Perfect. Now choose a username for our community.</div>
+    <div class="account-info">The username is used to attach your Diatabase to apps and helps people find you in the public directory. The registry is the public directory where your username will be listed.</div>
+    <mat-spinner *ngIf="busy" class="account-busy"></mat-spinner>
+    <div class="spacer"></div>
+    <div class="account-form">
+      <mat-form-field class="account-username">
+        <input matInput type="email" placeholder="Username"
+            (keydown.enter)="$event.target.blur()" [(ngModel)]="username">
+      </mat-form-field>
+      <mat-form-field class="account-username">
+        <input matInput type="email" placeholder="Registry"
+            (keydown.enter)="$event.target.blur()" [(ngModel)]="registry">
+      </mat-form-field>
+      <div class="account-control">
+        <button mat-raised-button class="account-button" color="primary" [disabled]="!isAvailable()" 
+            (click)="onSave()">Save Username</button>
+      </div>
+    </div>
+    <img class="account-img" src="assets/locked.png">
+  </div>
 </div>
 
-<div class="account-profile" *ngIf="entry!=null">
-  <account-profile [emigo]="emigo" [entry]="entry"></account-profile>
+<div *ngIf="mode!='create'">
+  <div *ngIf="entry==null" class="account-entry">
+    <div class="account-title">Account Portal</div>
+    <div *ngIf="init">
+      <div *ngIf="mode=='invalid'" class="account-message">Link is no longer valid.</div>
+      <div *ngIf="mode=='invalid'" class="account-redirect">Redirecting to Login Page.</div>
+      <div *ngIf="mode=='reset'" class="account-form">
+        <div class="account-message">Reset Password</div>
+        <mat-form-field class="account-text">
+          <input matInput type="password" placeholder="Password" 
+              (keydown.enter)="$event.target.blur()" [(ngModel)]="password">
+        </mat-form-field>
+        <mat-form-field class="account-text">
+          <input matInput type="password" placeholder="Confirm Password" 
+              (keydown.enter)="$event.target.blur()" [(ngModel)]="confirm">
+        </mat-form-field>
+        <div class="account-control">
+          <button mat-raised-button class="account-button" color="primary" [disabled]="!isConfirmed()" 
+              (click)="onReset()">Reset</button>
+        </div>
+      </div>
+      <div *ngIf="mode=='login'" class="account-form">
+        <mat-form-field class="account-text">
+          <input matInput type="email" placeholder="Username" spellcheck="false" 
+              (keydown.enter)="$event.target.blur()" [(ngModel)]="username">
+        </mat-form-field>
+        <mat-form-field class="account-text">
+          <input matInput type="password" placeholder="Password"
+              (keydown.enter)="$event.target.blur()" [(ngModel)]="password">
+        </mat-form-field>
+        <div class="account-control">
+          <button mat-raised-button class="account-button" color="primary" [disabled]="!isReady()"
+              (click)="onLogin()">Login</button>
+        </div>
+      </div>
+    </div>
+    <mat-spinner *ngIf="busy" class="account-spinner"></mat-spinner>
+  </div>
+  <div *ngIf="entry!=null" class="account-profile">
+    <account-profile [emigo]="emigo" [entry]="entry"></account-profile>
+  </div>
 </div>
 
-<div class="footer">
+<div [ngClass]="{ 'footer': mode!='create', 'base': mode=='create' }">
   <div class="row">
     <div class="col-md-2"><a class="option" href="https://diatum.org/about/">About Diatum</a></div>
     <div class="col-md-2"><a class="option" href="https://diatum.org/policies-introduction/">Policies</a></div>
