--- a/fe/src/app/account/username/username.component.html
+++ b/fe/src/app/account/username/username.component.html
@@ -1,17 +1,25 @@
 <div class="username-container">
 
   <div class="username-title">
-    <span>Account Username</span>
+    <img class="username-close" src="assets/close.png" (click)="onClose()">
+    <span class="username-header">Account Username</span>
+    <div class="username-close"></div>
   </div>
 
-  <div class="username-fields">
-    <mat-form-field class="username-text">
-      <input matInput placeholder="Username" (keydown)="onUpdate()" spellcheck="false" [(ngModel)]="handle">
-    </mat-form-field>
-    <div class="username-at">@</div>
-    <mat-form-field class="username-text">
-      <input matInput placeholder="Registry" (keydown)="onUpdate()" spellcheck="false" [(ngModel)]="registry">
-    </mat-form-field>
+  <div class="username-fields row">
+    <div class="col-md-5">
+      <mat-form-field class="username-text">
+        <input matInput placeholder="Username" type="email" (keydown)="onUpdate()" spellcheck="false"
+            (keydown.enter)="$event.target.blur()" [(ngModel)]="handle">
+      </mat-form-field>
+    </div>
+    <div class="username-at col-md-2">@</div>
+    <div class="col-md-5">
+      <mat-form-field class="username-text">
+        <input matInput placeholder="Registry" type="email" (keydown)="onUpdate()" spellcheck="false" 
+            (keydown.enter)="$event.target.blur()" [(ngModel)]="registry">
+      </mat-form-field>
+    </div>
   </div>
 
   <div class="username-alert">
