--- a/fe/src/app/device/confirm/confirm.component.html
+++ b/fe/src/app/device/confirm/confirm.component.html
@@ -5,9 +5,9 @@
   </div>
 
   <div class="confirm-buttons">
-    <button class="confirm-button" mat-raised-button color="accent" class="generate-button" (click)="onCancel()">No, Cancel</button>
+    <button class="confirm-button" mat-raised-button (click)="onCancel()">No, Cancel</button>
     <div class="confirm-space"></div>
-    <button class="confirm-button" mat-raised-button color="accent" class="generate-button" (click)="onConfirm()">Yes, Delete</button>
+    <button class="confirm-button" mat-raised-button (click)="onConfirm()">Yes, Delete</button>
   </div>
 
 </div>
