--- a/fe/src/app/console/config/config.component.scss
+++ b/fe/src/app/console/config/config.component.scss
@@ -28,10 +28,19 @@
   border-radius: 4px;
   max-height: 200px;
   width: 100%;
+  margin-bottom: 16px;
 }
 
 .config-node {
-  width: calc(35% - 48px);
+  width: calc(30% - 48px);
+  display: inline-block;
+  padding-left: 8px;
+  padding-right: 8px;
+  font-size: 12px;
+}
+
+.config-registry {
+  width: calc(15% - 48px);
   display: inline-block;
   padding-left: 8px;
   padding-right: 8px;
@@ -39,7 +48,7 @@
 }
 
 .config-token {
-  width: calc(65% - 48px);
+  width: calc(55% - 48px);
   display: inline-block;
   padding-left: 8px;
   padding-right: 8px;
