--- a/fe/src/app/account/account.component.scss
+++ b/fe/src/app/account/account.component.scss
@@ -17,6 +17,18 @@
   padding: 16px;
 }
 
+.account-num {
+  width: 24px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.account-item {
+  width: calc(100% - 24px);
+  display: inline-block;
+  vertical-align: top;
+}
+
 .account-message {
   font-size: 16px;
   text-align: center;
@@ -28,7 +40,7 @@
 }
 
 .account-alert {
-  height: 20px;
+  height: 16px;
   color: red;
   font-size: 14px;
   position: relative;
@@ -55,6 +67,7 @@
   width: 100%;
   margin: 0 auto;
   text-align: center;
+  font-size: 20px;
 }
 
 .account-password {
@@ -83,6 +96,7 @@
 
 .account-info {
   font-size: 16px;
+  padding-bottom: 4px;
 }
 
 .account-attach {
