removed registry text from create sequence

--- a/fe/src/app/account/account.component.html
+++ b/fe/src/app/account/account.component.html
@@ -40,7 +40,7 @@
   <div *ngIf="entry!=null" class="account-create">
     <div *ngIf="!hasUsername()">
       <div class="account-label">Perfect. Now choose a username for our community.</div>
-      <div class="account-info">The username is used to attach your Diatabase to apps and helps people find you in the public directory. The registry is the public directory where your username will be listed.</div>
+      <div class="account-info">The username is used to attach your Diatabase to apps and helps people find you in the public directory.</div>
       <mat-spinner *ngIf="busy" class="account-busy"></mat-spinner>
       <div class="spacer"></div>
       <div class="account-form">
