--- a/fe/src/app/account/account.component.html
+++ b/fe/src/app/account/account.component.html
@@ -121,7 +121,7 @@
     <mat-spinner *ngIf="busy" class="account-spinner"></mat-spinner>
   </div>
   <div *ngIf="entry!=null" class="account-profile">
-    <account-profile [emigo]="emigo" [entry]="entry"></account-profile>
+    <account-profile [amigo]="amigo" [entry]="entry"></account-profile>
   </div>
 </div>
 
