--- a/fe/src/app/account/profile/profile.component.html
+++ b/fe/src/app/account/profile/profile.component.html
@@ -10,9 +10,9 @@
         <span *ngIf="getHandle()==''" class="profile-placeholder">Username</span>
         <i class="fa fa-pencil-square-o profile-icon" (click)="onUsername()"></i>
       </div>
-      <div class="profile-name">{{ emigo.name }}</div>
-      <div class="profile-location">{{ emigo.location }}</div>
-      <div class="profile-description">{{ emigo.description }}</div>
+      <div class="profile-name">{{ amigo.name }}</div>
+      <div class="profile-location">{{ amigo.location }}</div>
+      <div class="profile-description">{{ amigo.description }}</div>
     </div>
   </div>
   <div class="profile-action">
