wording changes to clarify next steps

--- a/fe/src/app/account/account.component.html
+++ b/fe/src/app/account/account.component.html
@@ -56,11 +56,13 @@
               (click)="onSave()">Save Username</button>
         </div>
       </div>
+      <img class="account-face" src="assets/profile.png">
       <img class="account-img" src="assets/locked.png">
     </div>
     <div *ngIf="hasUsername()">
       <div class="account-label">Okay, now we need some apps!</div>
       <div class="account-info">In our system, apps need to attach to your Diatabase to have access to your data, including your contacts, photos and videos.</div>
+      <div class="account-info">Use Dikota first to connect with your friends and family and then use Jupstream to share your experiences.</div>
       <img class="account-attach" src="assets/attach.png">
       <div class="account-inst">To attach an app:</div>
       <div class="account-info">
