--- a/fe/src/app/account/account.component.scss
+++ b/fe/src/app/account/account.component.scss
@@ -106,6 +106,14 @@
   padding: 16px;
 }
 
+.account-face {
+  margin: 0 auto;
+  display: block;
+  width: min(160px, 40vw);
+  padding: 16px;
+  margin-top: 16px;
+}
+
 .account-img {
   margin: 0 auto;
   display: block;
