--- a/fe/src/styles.scss
+++ b/fe/src/styles.scss
@@ -31,7 +31,7 @@ $fa-font-path: "../node_modules/font-awesome/fonts";
 @import "../node_modules/font-awesome/scss/font-awesome.scss";
 
 html, body { height: 100%; }
-body { background-color: #BEE1FC !important; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { background-color: #BEE1FC !important; margin: 0; overflow-x: hidden; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .mat-dialog-container {
   padding: 0px !important;
