--- a/fe/src/app/account/account.component.html
+++ b/fe/src/app/account/account.component.html
@@ -63,23 +63,46 @@
       <div class="account-label">Okay, now we need some apps!</div>
       <div class="account-info">In our system, apps need to attach to your Diatabase to have access to your data, including your contacts, photos and videos.</div>
       <div class="account-info">Use Dikota first to connect with your friends and family and then use Jupstream to share your experiences.</div>
-      <img class="account-attach" src="assets/attach.png">
-      <div class="account-inst">To attach an app:</div>
-      <div class="account-info">
-        <div class="account-num">1.</div>
-        <div class="account-item">Generate a code below and copy it to your clipboard.</div>
+
+      <div *ngIf="isWeb()" class="listing">
+        <div class="apps">
+          <a class="app" href="https://diatum.org/dikota/">
+            <img class="icon" src="https://s3-us-west-2.amazonaws.com/org.diatum.public/dikota.png">
+            <div class="name">Dikota</div>
+          </a>
+          <a class="app" href="https://diatum.org/jupstream/">
+            <img class="icon" src="https://s3-us-west-2.amazonaws.com/org.diatum.public/jupstream.png">
+            <div class="name">Jupstream</div>
+          </a>
+        </div>
       </div>
-      <div class="account-info">
-        <div class="account-num">2.</div>
-        <div class="account-item">Open the app and enter your username in the login screen.</div>
+
+      <div *ngIf="isIos()" class="listing">
+        <div class="apps">
+          <a class="app" href="itms-apps://apps.apple.com/us/app/dikota/id1526510086">
+            <img class="icon" src="https://s3-us-west-2.amazonaws.com/org.diatum.public/dikota.png">
+            <div class="name">Dikota</div>
+          </a>
+          <a class="app" href="itms-apps://apps.apple.com/us/app/jupstream/id1559285751">
+            <img class="icon" src="https://s3-us-west-2.amazonaws.com/org.diatum.public/jupstream.png">
+            <div class="name">Jupstream</div>
+          </a>
+        </div>
       </div>
-      <div class="account-info">
-        <div class="account-num">3.</div>
-        <div class="account-item">Paste the attachment code in the login screen.</div>
+
+      <div *ngIf="isAndroid()" class="listing">
+        <div class="apps">
+          <a class="app" href="https://play.google.com/store/apps/details?id=org.diatum.dikota">
+            <img class="icon" src="https://s3-us-west-2.amazonaws.com/org.diatum.public/dikota.png">
+            <div class="name">Dikota</div>
+          </a>
+          <a class="app" href="https://play.google.com/store/apps/details?id=org.diatum.jupstream">
+            <img class="icon" src="https://s3-us-west-2.amazonaws.com/org.diatum.public/jupstream.png">
+            <div class="name">Jupstream</div>
+          </a>
+        </div>
       </div>
-      <div class="account-action">
-        <button mat-raised-button class="generate-button" (click)="onCode()">Attach App</button>
-      </div>
+
     </div>
   </div>
 </div>
