--- a/fe/src/app/account/account.component.scss
+++ b/fe/src/app/account/account.component.scss
@@ -1,3 +1,39 @@
+.apps {
+  width: 100%;
+}
+
+.app {
+  width: 50%;
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+}
+
+.icon {
+  width: 92px;
+  height: 92px;
+}
+
+.listing {
+  background: white;
+  border-radius: 32px;
+  padding: 20px;
+  margin-top: 16px;
+}
+
+.store {
+  font-size: 16px;
+  color: #444444;
+  text-align: center;
+  padding: 16px;
+}
+
+.name {
+  font-size: 18px;
+  color: #444444;
+}
+
 .account-entry {
   top: max(1px - 1px, 50vh - 265px);
   color: #444444;
@@ -96,7 +132,7 @@
 
 .account-info {
   font-size: 16px;
-  padding-bottom: 4px;
+  padding-bottom: 16px;
 }
 
 .account-attach {
