--- a/fe/src/app/account/account.component.scss
+++ b/fe/src/app/account/account.component.scss
@@ -226,6 +226,17 @@
   background-color: white;
 }
 
+.account-link {
+  text-decoration: none !important;
+  text-align: center;
+  font-size: 16px;
+  color: #1172ce;
+  width: 50%;
+  display: inline-block;
+  padding-bottom: 24px;
+  padding-top: 8px;
+}
+
 .spacer {
   height: 8px;
   margin: 0 auto;
